# grpo-gsm8k

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  cli.py  compose.yaml  pyproject.toml  requirements.lock.txt
.github/: copilot-instructions.md
.github/workflows/: build.yml
conf/: config.yaml
conf/data/: default.yaml
conf/eval/: default.yaml
conf/policy_gradient/: default.yaml
conf/preprocess/: default.yaml
conf/sft/: default.yaml
conf/tokenize/: default.yaml
conf/traces/: default.yaml
conf/wandb/: default.yaml
grpo_gsm8k/: cli.py  data_prep.py  fast_eval_vllm.py  format_r1_traces.py  get_response_log_probs.py  log_generations.py  masked_normalize.py  per_token_entropy.py  r1_traces.py  repro.py  reward_fn.py  sft.py  tokenize.py
grpo_gsm8k/core/: get_response_log_probs.py  masked_normalize.py
grpo_gsm8k/data/: data_loader.py  data_prep.py  prompts.py  template_gsm8k_val.py  tokenize_gsm8k_val.py  tokenize_r1_pairs.py
grpo_gsm8k/evaluation/: aggregate_gsm8k_results.py  ci.py  eval.py  eval_launcher.py  fast_eval_vllm.py  gsm8k_eval.py  log_generations.py  reward_fn.py  unified_eval.py
grpo_gsm8k/traces/: format_r1_traces.py  r1_traces.py
grpo_gsm8k/training/: grpo.py  policy_gradient.py  sft.py  utils.py
grpo_gsm8k/utils/: memprobe.py  repro.py
scripts/: cli.py  collect_system_info.sh  entrypoint.sh  env.det.sh  lock_env.sh  mode_collapse.py  prep_val_for_vllm.py  pretokenize_r1_pairs.py  sft_test_similarity.py  snapshot_dataset.sh  sync_b2.sh  tokenize_gsm8k_val.py
scripts/shell/: env.det.sh
tests/: conftest.py  test_data_prep_cli.py  test_format_r1_traces.py  test_get_response_log_probs.py  test_log_generations.py  test_masked_normalize.py  test_per_token_entropy.py  test_policy_gradient_group_normalized_rewards.py  test_policy_gradient_losses.py  test_policy_gradient_masked_mean.py  test_policy_gradient_microbatch.py  test_qwen_math.py  test_r1_traces_e2e.py  test_reward_fn.py  test_sft.py  test_sft_microbatch_train_step.py  test_tokenize_prompt_and_output.py
types/: wandb.pyi
