[project]
name = "grpo-gsm8k"
version = "0.1.0"
description = "RL fine-tuning open LLMs for math reasoning"
readme = "README.md"
requires-python = "==3.10.*"  # Ubuntu 22.04 ships 3.10
license = { text = "MIT" }
authors = [{ name = "David Bellamy"}]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = [
  # these ranges are lenient; uv.lock gives exacts
  "torch>=2.7,<2.8.999",          # cu128 wheels exist for 2.7.1 GA
  "torchvision>=0.22,<0.23",
  "torchaudio>=2.7,<2.8.999",
  "vllm>=0.9,<0.11",
  "transformers>=4.53,<4.54",
  "tokenizers>=0.21,<0.22",
  "datasets>=2.20,<2.21",
  "accelerate>=0.34.1,<1.0",
  "numpy>=2,<3",
  "wandb>=0.17,<0.19",
]

[project.optional-dependencies]
dev = [
  "pytest>=7,<9",
  "mypy>=1.10,<1.15",
  "ruff>=0.5,<0.7",
  "pre-commit>=3.7,<5",
]

[tool.uv]
environments = ["sys_platform == 'linux' and platform_machine == 'x86_64'"]
required-environments = ["sys_platform == 'linux'"]

[tool.uv.sources]
# Pin Torch family to the cu128 index on Linux
torch =       [{ index = "pytorch-cu128", marker = "sys_platform == 'linux'" }]
torchvision = [{ index = "pytorch-cu128", marker = "sys_platform == 'linux'" }]
torchaudio =  [{ index = "pytorch-cu128", marker = "sys_platform == 'linux'" }]

[[tool.uv.index]]
name = "pytorch-cu128"
url  = "https://download.pytorch.org/whl/cu128"
explicit = true
# (uv will still use PyPI for everything else)

# Pytest config
[tool.pytest.ini_options]
markers = [
  "slow: marks tests as slow (deselect with '-m \"not slow\"')",
  "serial"
]
addopts = "-q"

[tool.ruff]
line-length = 100
src = ["grpo_gsm8k"]

[tool.ruff.lint]
extend-select = ["E", "F", "I", "UP", "ARG"]

[tool.ruff.lint.isort]
known-first-party = ["grpo_gsm8k"]

[tool.mypy]
python_version = "3.10"
strict = false
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = true
no_implicit_optional = true
plugins = []
