[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "grpo-gsm8k"
version = "0.1.0"
description = "RL fine-tuning open LLMs for math reasoning"
readme = "README.md"
requires-python = "==3.10.*"
license = "MIT"
authors = [{ name = "David Bellamy"}]
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]
dependencies = [
  "torch>=2.7,<2.8.999",
  "torchvision>=0.22,<0.23",
  "torchaudio>=2.7,<2.8.999",
  "vllm>=0.9,<0.11",
  "transformers>=4.53,<4.54",
  "tokenizers>=0.21,<0.22",
  "datasets>=2.20,<2.21",
  "accelerate>=0.34.1,<1.0",
  "numpy>=2,<3",
  "wandb>=0.20.0",
]

[tool.uv]
environments = ["sys_platform == 'linux' and platform_machine == 'x86_64'"]
required-environments = ["sys_platform == 'linux'"]

[dependency-groups]
dev = [
  "pytest>=7,<9",
  "pytest-asyncio>=0.23,<0.25",
  "mypy>=1.10,<1.15",
  "ruff>=0.5,<0.7",
  "pre-commit>=3.7,<5",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["grpo_gsm8k*"]
exclude = ["tests*", "artifacts*", "wandb*", "tmp*"]

[tool.uv.sources]
torch =       [{ index = "pytorch-cu128", marker = "sys_platform == 'linux'" }]
torchvision = [{ index = "pytorch-cu128", marker = "sys_platform == 'linux'" }]
torchaudio =  [{ index = "pytorch-cu128", marker = "sys_platform == 'linux'" }]

[[tool.uv.index]]
name = "pytorch-cu128"
url  = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.pytest.ini_options]
markers = [
  "slow",
  "serial"
]
addopts = "-q"
filterwarnings = [
  "ignore:Using `TRANSFORMERS_CACHE`.*:FutureWarning",
  "ignore:builtin type SwigPyPacked has no __module__ attribute:DeprecationWarning",
  "ignore:builtin type SwigPyObject has no __module__ attribute:DeprecationWarning",
  "ignore:builtin type swigvarlink has no __module__ attribute:DeprecationWarning",
]

[tool.ruff]
line-length = 100
src = ["grpo_gsm8k"]

[tool.ruff.lint]
extend-select = ["E", "F", "I", "UP", "ARG"]

[tool.ruff.lint.isort]
known-first-party = ["grpo_gsm8k"]

[tool.mypy]
python_version = "3.10"
strict = false
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = true
no_implicit_optional = true
plugins = []
mypy_path = "types"
